# pocket_watch

./: .gitignore  app.json  app.tsx  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
backend/: .env  .env.example  .gitignore  .vercelignore  API_REFERENCE.md  ARCHITECTURE.md  PAYMENT_DOCUMENTATION.md  PLANS_API_DOCUMENTATION.md  README.md  README_API.md  SETUP_WIZARD_API.md  USER_SETUP_API.md  alembic.ini  main.py  pocketwatch.db  pyproject.toml  requirements.txt  test_tenant_system.py
backend/alembic/: env.py
backend/alembic/versions/: 3bc3800a9168_merge_plans_and_payment_heads.py  535156ee94d5_merge_heads.py  a1b2c3d4e5f6_initial_postgresql_schema.py  add_billing_details_to_payment_methods.py  add_company_subscriptions.py  add_payment_tables.py  add_user_setup_fields.py  b2c3d4e5f6g7_separate_admin_and_invitee.py  c1d2e3f4g5h6_public_schema_companies.py  d1e2f3g4h5i6_admin_profile_fields.py
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  admin.py  admin_otp.py  admin_refresh_token.py  company.py  invitee.py  invitee_otp.py  invitee_refresh_token.py  otp.py  payment.py  plan.py  refresh_token.py  user.py  user_DEPRECATED.py
backend/app/routes/: __init__.py  admin_plants.py  admin_users.py  alerts.py  auth.py  charts.py  data_entry.py  invitee_auth.py  payment.py  plans.py  plant_setup.py  setup_wizard.py  users_auth.py
backend/app/schemas/: __init__.py  (+6 more)
backend/scripts/: add_model_ids_to_stations.py  add_setup_tables_to_tenants.py  add_users_to_setupstep_enum.py
(+53 files in other folders)
