[project]
name = "backend"
version = "0.1.0"
description = "PocketWatch Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.131.0",
    "passlib>=1.7.4",
    "psycopg2-binary",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "resend>=2.22.0",
    "sqlalchemy>=2.0.46",
    "stripe>=10.2.0",
    "twilio>=9.10.2",
    "uvicorn>=0.41.0",
    "mangum>=0.19.0",
]
